--- a/src/app/features/chatbot/chatbot.html
+++ b/src/app/features/chatbot/chatbot.html
@@ -18,7 +18,7 @@
             }
           </div>
           <div class="message-content">
-            <div class="message-text">{{ message.content }}</div>
+            <div class="message-text" [innerHTML]="message.renderedContent || message.content"></div>
             <div class="message-time">
               {{ message.timestamp.toLocaleTimeString() }}
             </div>
